# gmail-auto

./: .gitignore  ENGINEERING_NOTES.md  README.md  config.py  email_drafter.py  email_fetcher.py  llm_classifier.py  main.py  models.py  notifier.py  pyproject.toml  railway.toml  start.bat
.github/workflows/: ci.yml
tests/: test_classifier.py
